@@ -2510,7 +2510,7 @@ gmp_mpn_functions="$extra_functions					   \
   toom_couple_handling							   \
   toom2_sqr toom3_sqr toom4_sqr						   \
   toom_eval_dgr3_pm1 toom_eval_dgr3_pm2 				   \
-  toom_eval_pm1 toom_eval_pm2 toom_eval_pm2exp	   			   \
+  toom_eval_pm1 toom_eval_pm2 toom_eval_pm2exp toom_eval_pm2rexp	   \
   toom_interpolate_5pts toom_interpolate_6pts toom_interpolate_7pts	   \
   toom_interpolate_8pts toom_interpolate_12pts				   \
   invertappr invert binvert mulmod_bnm1 sqrmod_bnm1			   \
